--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^5.2.1",
     "firebase-admin": "^13.6.0",
     "form-data": "^4.0.5",
+    "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.3",
     "luxon": "^3.7.2",
     "multer": "^2.0.2"
